fixing webdev image and image tab on mobile

--- a/infoSite/static/styles/classes.css
+++ b/infoSite/static/styles/classes.css
@@ -137,3 +137,12 @@ p {
         margin-right: 0;
     }
 }
+
+@media(max-width:677px) {
+    #web-development {
+        height: 50vw;
+        width: 50vw;
+        margin-right:12%;
+    }
+
+}
