--- a/infoSite/static/styles/photos.css
+++ b/infoSite/static/styles/photos.css
@@ -11,6 +11,6 @@ img.classphoto:first-child {
 @media (max-width: 1000px) {
     .classphoto {
         margin: 7px 15px;
-        width:92%;
+        width:86%;
     }
   }
